# jvm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  note.txt  run.sh
crates/class-parser/: Cargo.toml  README.md  build.rs
crates/class-verification/: Cargo.toml
crates/classfile/: Cargo.toml  README.md
crates/classfile/src/: attributes.rs  classfile.rs  constant_pool.rs  consts.rs  field_info.rs  flags.rs  lib.rs  method_info.rs  opcode.rs  signature.rs  types.rs  version.rs
crates/vm/: Cargo.toml  README.md
crates/vm/src/: lib.rs  types.rs
crates/vm/src/native/: java_io_FileDescriptor.rs  java_io_FileInputStream.rs  java_io_FileOutputStream.rs  java_io_ObjectStreamClass.rs  java_io_PrintStream.rs  java_io_UnixFileSystem.rs  java_lang_Class.rs  java_lang_ClassLoader.rs  java_lang_Double.rs  java_lang_Float.rs  java_lang_Object.rs  java_lang_Runtime.rs  java_lang_String.rs  java_lang_System.rs  java_lang_Thread.rs  java_lang_Throwable.rs  java_lang_reflect_Array.rs  java_lang_reflect_Proxy.rs  java_security_AccessController.rs  java_security_Provider.rs  java_util_concurrent_atomic_AtomicLong.rs  jdk_internal_reflect_ReflectionFactory.rs  mod.rs  sun_misc_Signal.rs  sun_misc_URLClassPath.rs  sun_misc_Unsafe.rs  sun_misc_VM.rs  sun_nio_cs_StreamEncoder.rs  sun_reflect_ConstantPool.rs  sun_reflect_NativeConstructorAccessorImpl.rs  sun_reflect_NativeMethodAccessorImpl.rs  sun_reflect_Reflection.rs
crates/vm/src/native/common/: reflect.rs
crates/vm/src/oop/: ary.rs  class.rs  consts.rs  field.rs  heap.rs  inst.rs  method.rs  mod.rs  reference.rs  values.rs
crates/vm/src/runtime/: class_loader.rs  class_path_manager.rs  cmp.rs  constant_pool.rs  dataarea.rs  exception.rs  frame.rs  init_vm.rs  interp.rs  invoke.rs  java_call.rs  local.rs  method.rs  mod.rs  slot.rs  stack.rs  sys_dic.rs  thread.rs  vm.rs
crates/vm/src/runtime/interp/: arith_ops.rs  array_ops.rs  compare.rs  const_ops.rs  control_flow.rs  conversion.rs  exception.rs  field_ops.rs  load_store.rs  mod.rs  monitor_ops.rs  object_ops.rs  read.rs  stack_ops.rs
crates/vm/src/runtime/jit/: builder.rs  mod.rs  ops.rs  runtime.rs
crates/vm/src/runtime/thread/: condvar.rs  java.rs  java_thread.rs  main.rs  main_thread.rs  mod.rs  mutex.rs  pool.rs  thread_pool.rs  threads.rs
crates/vm/src/util/: attributes.rs  consts.rs  debug.rs  macros.rs  mod.rs  oop.rs
documents/: jit-basics.md  jrt-jimage-format.md  jvm-implementation-challenges.md  slot-based-heap-design.md
jvm/: Cargo.toml  README.md  r.sh  run.sh  t.sh
jvm/sample/: HelloWorld.java
jvm/src/: main.rs  options.rs  types.rs
jvm/src/native/: java_io_FileInputStream.rs  java_lang_Class.rs  java_lang_Float.rs  java_lang_Thread.rs  java_lang_reflect_Proxy.rs  java_security_AccessController.rs  mod.rs  sun_misc_URLClassPath.rs  sun_reflect_ConstantPool.rs  sun_reflect_NativeMethodAccessorImpl.rs
jvm/src/native/common/: reflect.rs
jvm/src/oop/: class.rs  field.rs  method.rs  mod.rs
jvm/src/runtime/: class_loader.rs  cmp.rs  dataarea.rs  exception.rs  frame.rs  init_vm.rs  interp.rs  java_call.rs  sys_dic.rs
jvm/src/util/: attributes.rs  macros.rs  mod.rs
libjvm/: Cargo.toml  README.md
libjvm/src/: invocation.rs  invokation.rs  lib.rs  native.rs  private.rs  util.rs
scripts/: dev.sh
src/: main.rs  parser.rs  types.rs
src/classfile/: access_flags.rs  attr_info.rs  attributes.rs  checker.rs  classfile.rs  constant_pool.rs  consts.rs  field_info.rs  method_info.rs  mod.rs  opcode.rs  signature.rs  types.rs
src/native/: java_io_FileDescriptor.rs  java_io_FileInputStream.rs  java_io_FileOutputStream.rs  java_io_UnixFileSystem.rs  java_lang_Class.rs  java_lang_ClassLoader.rs  java_lang_Double.rs  java_lang_Float.rs  java_lang_Object.rs  java_lang_Runtime.rs  java_lang_String.rs  java_lang_System.rs  java_lang_Thread.rs  java_lang_Throwable.rs  java_lang_class.rs  java_lang_double.rs  java_lang_float.rs  java_lang_object.rs  java_lang_reflect_Array.rs  java_lang_reflect_Proxy.rs  java_lang_system.rs  java_lang_thread.rs  java_lang_throwable.rs  java_security_AccessController.rs  java_security_accesscontroller.rs  java_util_concurrent_atomic_AtomicLong.rs  mod.rs  sun_misc_Signal.rs  sun_misc_URLClassPath.rs  sun_misc_Unsafe.rs  sun_misc_VM.rs  sun_misc_vm.rs  sun_nio_cs_StreamEncoder.rs  sun_reflect_ConstantPool.rs  sun_reflect_NativeConstructorAccessorImpl.rs  sun_reflect_NativeMethodAccessorImpl.rs  sun_reflect_Reflection.rs  system.rs
src/oop/: ary.rs  class.rs  consts.rs  field.rs  method.rs  mirror.rs  mod.rs  values.rs
src/runtime/: class_loader.rs  class_path_manager.rs  cmp.rs  consts.rs  cp_manager.rs  dataarea.rs  exception.rs  execution.rs  frame.rs  init_vm.rs  interp.rs  interpreter.rs  java_call.rs  local.rs  (+7 more)
test/: Add.java  EnumDemo.java  Ex.java  HashCode.java  SubOverflow.java  Test.java
tests/: Cargo.toml  README.md  build.rs
tools/: native.py
tools/javap/: Cargo.toml  run.sh
tools/javap/src/: main.rs  strategy.rs  template.rs
tools/javap/src/cmd/: disassemble.rs  line_number.rs  mod.rs
tools/javap/src/cmd/sd/: mod.rs
tools/javap/src/misc/: class_path_manager.rs  mod.rs  sys_info.rs
tools/javap/src/sd/: code.rs  mod.rs
tools/javap/src/trans/: access_flag.rs  class_acc_translator.rs  class_file.rs  class_file_translator.rs  code.rs  constant_pool_trans.rs  field.rs  method.rs  method_translator.rs  mod.rs  signature_type.rs
tools/javap/src/trans/instruction/: aaload.rs  aastore.rs  aconst_null.rs  aload.rs  aload_0.rs  aload_1.rs  aload_2.rs  aload_3.rs  anewarray.rs  areturn.rs  arraylength.rs  astore.rs  astore_0.rs  astore_1.rs  astore_2.rs  astore_3.rs  athrow.rs  baload.rs  bastore.rs  bipush.rs  caload.rs  castore.rs  checkcast.rs  d2f.rs  d2i.rs  d2l.rs  dadd.rs  daload.rs  dastore.rs  dcmpg.rs  dcmpl.rs  dconst_0.rs  dconst_1.rs  ddiv.rs  dload.rs  dload_0.rs  dload_1.rs  dload_2.rs  dload_3.rs  dmul.rs  (+164 more)
tools/javap/src/util/: mod.rs  sys.rs
tools/javap/test/: AbstractGraphicObject.java  EnumMobile.java  Football.java  HelloWorld.java  Hockey.java  Interface1.java  Sports.java
(+53 files in other folders)
