[workspace]
members = [
  "jvm",
  "crates/classfile",
  "crates/class-parser",
  "crates/vm",
  "tools/javap",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Dou Chuan <1843657913@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A JVM implementation in Rust"

[workspace.dependencies]
# Path dependencies
classfile = { path = "crates/classfile" }
class-parser = { path = "crates/class-parser" }
class-verification = { path = "crates/class-verification" }
vm = { path = "crates/vm" }

# Third-party
chrono = "0.4"
clap = "3.0.0-beta.1"
dirs = "3.0.1"
env_logger = "0.8.2"
handlebars = "3.0.1"
inkwell = { version = "0.9", features = ["llvm22-1"] }
jimage-rs = "0.0.4"
lazy_static = "1.4.0"
libc = "0.2.85"
log = "0.4"
md5 = "0.7.0"
nix = "0.19.1"
rustc-hash = "1.1.0"
serde = "1.0.0"
serde_derive = "1.0.75"
serde_json = "1.0.39"
time = "0.2.16"
zip = "0.5.9"

#https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
