[workspace]
members = [
  "jvm",
  "crates/classfile",
  "crates/class-parser",
  "crates/vm",
  "tools/javap",
  "tests",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["Dou Chuan <1843657913@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A JVM implementation in Rust"

[workspace.dependencies]
# Path dependencies
classfile = { path = "crates/classfile" }
class-parser = { path = "crates/class-parser" }
class-verification = { path = "crates/class-verification" }
vm = { path = "crates/vm" }

# Third-party
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
handlebars = "4.5"
inkwell = { version = "0.9", features = ["llvm22-1"] }
jimage-rs = "0.0.4"
libc = "0.2"
md5 = "0.7"
nix = "0.29"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "0.6"

#https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
