[package]
name = "jvm"
version = "0.2.0"
authors = ["douchuan <1843657913@qq.com>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
chrono = "0.4.9"
clap = "2.33.0"
class-parser = { path="../crates/class-parser", version="0.1.0" }
dirs = "2.0.2"
env_logger = "0.7.1"
lazy_static = "1.4.0"
libc = "0.2.66"
log = "0.4.0"
nix = "0.17.0"
zip = "0.5.4"
