[package]
name = "jvm"
version = "0.2.0"
authors = ["douchuan <1843657913@qq.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
class-parser = { path = "../crates/class-parser", version = "0.1.0" }
env_logger = "0.8.2"
vm = { path = "../crates/vm", version = "0.1.0" }

[dev-dependencies]
classfile = { path = "../crates/classfile", version = "0.1.0" }
libc = "0.2.71"
