[package]
name = "libjvm"
version = "0.1.0"
authors = ["Лач <iam@lach.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni-sys = "0.3.0"
libc = "0.2.68"
lazy_static = "1.4.0"

[lib]
name = "jvm"
crate-type = ["cdylib"]
