[package]
name = "vm"
version = "0.1.0"
authors = ["Dou Chuan <1843657913@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
classfile = { path = "../classfile", version = "0.1.0" }
class-parser = { path="../class-parser", version="0.1.0" }
dirs = "3.0.1"
lazy_static = "1.4.0"
libc = "0.2.85"
log = "0.4"
nix = "0.19.1"
rustc-hash = "1.1.0"
zip = "0.5.9"
