[package]
name = "vm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
classfile.workspace = true
class-parser.workspace = true
dirs.workspace = true
inkwell.workspace = true
jimage-rs.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
nix.workspace = true
rustc-hash.workspace = true
zip.workspace = true
