[package]
name = "javap"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "2.33.1" }
classfile.workspace = true
class-parser.workspace = true
env_logger = { version = "0.7.1" }
handlebars.workspace = true
lazy_static.workspace = true
log.workspace = true
md5 = "0.7.0"
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
time.workspace = true
zip.workspace = true
