[package]
name = "javap"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
classfile.workspace = true
class-parser.workspace = true
handlebars.workspace = true
md5.workspace = true
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
